infrastructure/headlamp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`headlamp.dcxxiv.com`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: headlamp
          port: 80
  tls:
    secretName: headlamp-tls
